INTYG-2513: mi-field direktivet använder nu wc-intyg-label direktivet.

--- a/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/intyg/miField.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/intyg/miField.directive.html
@@ -1,10 +1,11 @@
 <div class="body-row">
-   <h3 class="title" ng-class="{ 'unfilled' : !filled}">
-     <span ng-if="fieldLabel" message key="{{fieldLabel}}"></span>
-     <span ng-if="fieldDynamicLabel" dynamic-label key="{{ fieldDynamicLabel }}"></span>
-     <span ng-hide="filled"><span message key="view.label.blank"></span></span>
-   </h3>
-   <span class="text" ng-show="filled">
-       <span ng-transclude></span>
-   </span>
+  <span ng-if="fieldDynamicLabel" wc-intyg-label="fieldDynamicLabel"></span>
+  <h3 class="title" ng-if="fieldLabel" ng-class="{ 'unfilled' : !filled}">
+    <span message key="{{fieldLabel}}"></span>
+    <!--span ng-if="fieldDynamicLabel" dynamic-label key="{{ fieldDynamicLabel }}"></span-->
+  </h3>
+  <span ng-hide="filled"><span message key="view.label.blank"></span></span>
+  <span class="text" ng-show="filled">
+    <span ng-transclude></span>
+  </span>
 </div>
