INTYG-2617: Visning av relaterade intyg på utkast- och intygssidor

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intyg-header/intyg-header.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intyg-header/intyg-header.html
@@ -27,7 +27,7 @@
   <div ng-show="!viewState.common.activeErrorMessageKey" id="intyg-vy-laddad">
     <div class="print-hide">
       <div class="form-group buttonbar">
-        <label class="control-label">{{viewState.intygModel.grundData.patient.fullstandigtNamn}} - {{viewState.intygModel.grundData.patient.personId}}</label>
+        <div wc-intyg-relations></div>
         <div class="btn-row">
           <button type="button" id="sendBtn" class="btn btn-info"
                   ng-if="visaSkickaKnappen()"
