INTYG-2553: Minskad clickable-area på hantera ärende

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/fk/arenden/arendeHantera.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/fk/arenden/arendeHantera.directive.html
@@ -1,5 +1,5 @@
 <div>
-  <label class="checkbox" ng-if="!parentViewState.intygProperties.kompletteringOnly">
+  <label class="checkbox-inline" ng-if="!parentViewState.intygProperties.kompletteringOnly">
     <input type="checkbox" ng-model="handledFunction" ng-model-options="{ getterSetter: true }"
            id="handleCheck-{{arendeListItem.arende.fraga.internReferens}}">
     Hanterad
