--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/singleText.formly.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/singleText.formly.html
@@ -1,5 +1,5 @@
-<div class="form-group form-inline row" ng-class="{'indent' : to.indent, 'bold' : to.bold}">
-  <div class="col-md-{{to.labelColSize}}">
+<div class="form-group form-{{to.formType}} row" ng-class="{'indent' : to.indent, 'bold' : to.bold}">
+  <div class="col-md-{{to.labelColSize}} control-label">
     <label class="form-control-label">
         <span ng-if="to.label" dynamic-label key="{{to.label}}.RBK"></span>
         <span ng-if="to.staticLabel">{{to.staticLabel}}</span>
