INTYG-2617: Intygstatus i listan med relaterade intyg

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/wcIntygRelations.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/wcIntygRelations.directive.html
@@ -32,7 +32,7 @@
         <span ng-if="relation.kod" message key="common.intyg.relation.code.{{relation.kod}}"></span>
       </td>
       <td>
-        <span message key="common.intyg.relation.status.{{relation.status}}"></span>
+        <span message key="cert.status.{{relation.status}}"></span>
       </td>
       <td>
         {{relation.date | date:'shortDate' }}
