--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/underlag.formly.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/underlag.formly.html
@@ -1,4 +1,8 @@
 <div class="" ng-show="model.underlagFinns">
+  <label class="control-label inline-block bold">
+    <span dynamic-label key="{{to.label}}.RBK"></span>
+    <span wc-help-mark field-dynamic-help-text="{{to.label}}.HLP"></span>
+  </label>
   <table class="form-group">
     <tr class="underlagRow">
       <th><span dynamic-label key="{{to.typLabel}}.RBK"></span> <span wc-help-mark field-dynamic-help-text="{{to.typLabel}}.HLP"></span></th>
