INTYG-2706: Ej angivet om underlag saknas

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/fk/wcViewIntygFields.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/fk/wcViewIntygFields.directive.html
@@ -47,6 +47,7 @@
               </div>
               <span id="{{field.key}}-{{$index}}-hamtasFran">{{underlag.hamtasFran}}</span>
             </div>
+            <span class="not-entered" ng-hide="intygModel[field.key].length > 0"> <span message key="common.notset"></span></span>
           </div>
           <div ng-switch-when="diagnos">
             <div ng-repeat="diagnos in intygModel[field.key]">
