--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/fk/arenden/paminnelse/arendePaminnelsePanelHeader.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/fk/arenden/paminnelse/arendePaminnelsePanelHeader.directive.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-xs-9">
-    <div class="fraga.status-header">
+    <div class="fraga-status-header">
 
       <div arende-panel-header-amne arende-list-item="arendeListItem"></div>
 
