--- a/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/intyg/miField.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/intyg/miField.directive.html
@@ -1,5 +1,5 @@
 <div class="body-row">
-  <span ng-if="fieldDynamicLabel" wc-intyg-label="fieldDynamicLabel"></span>
+  <span ng-if="fieldDynamicLabel" mi-intyg-label="fieldDynamicLabel"></span>
   <h3 class="title" ng-if="fieldLabel" ng-class="{ 'unfilled' : !filled}">
     <span message key="{{fieldLabel}}"></span>
     <!--span ng-if="fieldDynamicLabel" dynamic-label key="{{ fieldDynamicLabel }}"></span-->
