--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/wcIntygRelations.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/wcIntygRelations.directive.html
@@ -3,10 +3,7 @@
     {{viewState.intygModel.grundData.patient.fullstandigtNamn}} -
     {{viewState.intygModel.grundData.patient.personId}}
   </label>
-</div>
-<a ng-click="showrelated = !showrelated" id="toggleShowRelatedIntyg" ng-show="viewState.relations.length > 1">
-  <span ng-show="!showrelated" message key="common.intyg.relation.showrelated"></span>
-  <span ng-show="showrelated" message key="common.intyg.relation.hiderelated"></span>
+</div><a ng-click="showrelated = !showrelated" id="toggleShowRelatedIntyg" ng-show="viewState.relations.length > 1"><span ng-show="!showrelated" message key="common.intyg.relation.showrelated"></span><span ng-show="showrelated" message key="common.intyg.relation.hiderelated"></span>
 </a>
 <div uib-collapse="!showrelated" id="intygRelations">
   <table class="table table-striped table-qa">
@@ -18,12 +15,9 @@
     </tr>
     <tr ng-repeat="relation in viewState.relations">
       <td>
-                <span ng-if="viewState.intygModel.id == relation.intygsId"
-                      message key="common.intyg.relation.currentlyviewing">
-                </span>
-        <button ng-if="viewState.intygModel.id != relation.intygsId"
-                type="button"
-                class="btn btn-info"
+        <span class="currentlyviewing" ng-if="viewState.intygModel.id == relation.intygsId" message
+              key="common.intyg.relation.currentlyviewing"></span>
+        <button ng-if="viewState.intygModel.id != relation.intygsId" type="button" class="btn btn-info"
                 ng-click="gotoRelatedIntyg(relation)">
           <span message key="common.intyg.relation.show"></span>
         </button>
