--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intyg-header/intyg-header.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intyg-header/intyg-header.html
@@ -26,8 +26,10 @@
 
   <div ng-show="!viewState.common.activeErrorMessageKey" id="intyg-vy-laddad">
     <div class="print-hide">
-      <div class="form-group buttonbar">
+      <div class="form-group">
         <div wc-intyg-relations></div>
+      </div>
+      <div class="form-group buttonbar">
         <div class="btn-row">
           <button type="button" id="sendBtn" class="btn btn-info"
                   ng-if="visaSkickaKnappen()"
