--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/underlag.formly.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/underlag.formly.html
@@ -12,7 +12,7 @@
     </tr>
     <tr class="underlagRow" ng-repeat="underlag in model.underlag">
       <td>
-        <select class="form-control" name="andraUnderlag" id="underlag-{{$index}}-typ" data-ng-model="underlag.typ"
+        <select id="underlag-{{$index}}-typ" class="form-control" name="andraUnderlag-{{$index}}" data-ng-model="underlag.typ"
                 data-ng-options="item.id as item.label for item in underlagOptions"></select>
       </td>
       <td>
@@ -22,14 +22,14 @@
       <td>
         <input id="underlag-{{$index}}-hamtasFran" type="text" class="form-control input-full" ng-model="underlag.hamtasFran">
       </td>
-      <td><button type="button" class="btn btn-default btn-secondary" ng-click="removeUnderlag($index)"
+      <td><button id="underlag-{{$index}}-remove" type="button" class="btn btn-default btn-secondary" ng-click="removeUnderlag($index)"
                 ng-show="model.underlag.length > 1"><span class="glyphicon glyphicon-remove"></span></button>
       </td>
     </tr>
 
   </table>
   <div>
-    <button type="button" ng-if="model.underlag.length < to.maxUnderlag" href="" ng-click="createUnderlag()" class="btn btn-default btn-secondary"
+    <button id="laggTillUnderlag" type="button" ng-if="model.underlag.length < to.maxUnderlag" href="" ng-click="createUnderlag()" class="btn btn-default btn-secondary"
        ng-class="{ 'disabled': previousUnderlagIncomplete() }"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Lägg
       till ytterligare underlag</button>
     <span ng-if="model.underlag.length === to.maxUnderlag"><span message key="common.sit.client-validation.underlag.max-extra-underlag" param="to.maxUnderlag"></span></span><!-- kursivera -->
