--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/date/wcDatePickerField.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/date/wcDatePickerField.directive.html
@@ -5,6 +5,7 @@
             uib-datepicker-popup="{{format}}"
             max-date="{{maxDate}}"
             ng-model-options="{ allowInvalid: true }"
+            datepicker-options="dateOptions"
            wc-date-picker-field-input/>
     <span class="input-group-btn">
       <button type="button" id="{{domId}}-toggle" class="btn btn-default" ng-click="toggleOpen($event)" ng-disabled="isOpen"><i class="glyphicon glyphicon-calendar"></i></button>
