--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/fk/arenden/vidarebefordra/arendeVidarebefordra.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/fk/arenden/vidarebefordra/arendeVidarebefordra.directive.html
@@ -1,4 +1,4 @@
-<div class="row" ng-if="!parentViewState.intygProperties.kompletteringOnly">
+<div class="row" ng-if="showVidarebefordra()">
   <div class="col-xs-8"></div>
   <div wc-authority="VIDAREBEFORDRA_FRAGASVAR" class="col-xs-4 form-inline arende-panel__vidarebefordra-placement"
        ng-show="!parentViewState.intygProperties.isRevoked">
