INTYG-2876: Ändrad rubrik i kompletteringsdialog (och fixat att Svar label visas vid kompletteringssvar med meddelande)

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/fk/arenden/arendePanelSvar.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/fk/arenden/arendePanelSvar.directive.html
@@ -56,7 +56,7 @@
       <div class="form-group">
 
         <!-- Rubrik: Svar -->
-        <label class="control-label" ng-show="showRegularAnswer()">Svar</label>
+        <label class="control-label" ng-show="isAnswerAllowed()">Svar</label>
 
 
         <!-- ELLER inforuta komplettering EJ IMPLEMENTERAT än. Ingår i "SVAR SOM FÖLJER MED" komplettering funktionalitet.
