--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/fk/wcViewIntygFields.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/fk/wcViewIntygFields.directive.html
@@ -1,6 +1,7 @@
 <div>
   <div wc-field field-dynamic-label="KAT_{{group.templateOptions.category}}.RBK" ng-repeat="group in intygFields">
-    <div ng-repeat="field in group.fieldGroup" ng-if="!field.templateOptions.hideFromSigned" class="intyg-field">
+    <div ng-repeat="field in group.fieldGroup" ng-if="!field.templateOptions.hideFromSigned" class="intyg-field"
+         ng-attr-id="{{field.key && 'form_'+field.key || undefined}}">
       <div wc-intyg-label="field.templateOptions.label"></div>
       <div ng-if="field.key" field-selective-view="field" field-model="intygModel">
         <div ng-switch="field.type">
