--- a/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/intyg/miField.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/intyg/miField.directive.html
@@ -1,9 +1,9 @@
-<div class="body-row">
+<div class="body-row" ng-class="{'unfilled' : !filled}">
   <span ng-if="fieldDynamicLabel" mi-intyg-label="fieldDynamicLabel"></span>
   <h3 class="title" ng-if="fieldLabel" ng-class="{'unfilled' : !filled}">
     <span message key="{{fieldLabel}}"></span>
   </h3>
-  <span ng-hide="filled"><span message key="view.label.blank"></span></span>
+  <span ng-hide="filled"><span class="text" message key="modules.label.blank"></span></span>
   <span class="text" ng-show="filled">
     <span ng-transclude></span>
   </span>
