--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intyg.send.dialog.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intyg.send.dialog.html
@@ -8,11 +8,8 @@
 	<div style="padding-bottom: 10px"><span id="{{bodyId}}" message key="{{bodyTextId}}"></span></div>
 </div>
 <div class="modal-footer">
-  <div class="form-group">
-    <label class="checkbox"><input id="patientSamtycke" type="checkbox" ng-model="model.patientConsent"> Patienten samtycker till att intyget skickas.</label>
-  </div>
   <div class="form-inline">
-    <button type="button" id="{{button1id}}" class="btn btn-success" ng-disabled="!model.patientConsent || !model.acceptprogressdone" ng-click="button1click()">
+    <button type="button" id="{{button1id}}" class="btn btn-success" ng-disabled="!model.acceptprogressdone" ng-click="button1click()">
       <img ng-hide="model.acceptprogressdone" ng-src="/img/ajax-loader-small-green.gif"/>
       <span message key="{{button1text}}"></span>
     </button>
